# Romer

./: .gitignore  Cargo.toml  README.md
config/: genesis.toml  regions.toml  storage.toml  validator.toml
docs/: _quarto.yml  about.html  devnet.html  economics.html  index.html  index.qmd  listings.json  pop.html  pop.qmd  regions.html  robots.txt  search.json  sitemap.xml  tokenomics.html  tokenomics.qmd
docs/blog/: index.html  index.xml
docs/blog/posts/2024-12-31-why-commonware/: index.html
docs/economics/: distribution.html  index.html  market.html  model.html
docs/pitch/: index.html  index.qmd
docs/technical/: devnet.html  index.html  network.html  notes.html  pop.html  validators.html
src/: automaton.rs  block.rs  cli.rs  main.rs  metrics.rs  node.rs  storage.rs  validator.rs
src/config/: mod.rs  storage.rs  validator.rs
src/consensus/: automaton.rs  beacon.rs  mod.rs  proposer.rs  relay.rs
src/domain/: address.rs  block.rs  coin.rs  economics.rs  mod.rs  network.rs  region.rs  validator.rs
src/identity/: keys.rs
src/node/: hardware.rs  mod.rs  validator.rs  validator_new.rs
src/regions/: region.rs
src/types/: block.rs  region.rs  reward.rs
website/: _quarto.yml  economics.qmd  engineering.qmd  index.qmd  tokenomics.qmd
website/blog/posts/2025-01-01-devnet/: index.qmd
website/docs/: index.html
website/docs/pitch/: index.html
website/economics/: distribution.qmd  index.qmd  model.qmd
website/pitch/: index.qmd
