[package]
name = "romer"
version = "0.1.0"
edition = "2021"

[dependencies]
commonware-p2p = "=0.0.25"
commonware-cryptography = "=0.0.14"  # This needs to match p2p's requirement
commonware-runtime = "=0.0.11"
commonware-utils = "=0.0.3"
hex = "0.4"
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus-client = "0.22"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
governor = "0.6"
bytes = "1.5"
futures = "0.3"